# flutter_vlc_player

./: .gitignore
flutter_vlc_player/: pubspec.yaml
flutter_vlc_player/android/: build.gradle
flutter_vlc_player/android/src/main/cpp/: CMakeLists.txt  dummy.cpp  libvlcjni-media.c  libvlcjni-vlcobject.h
flutter_vlc_player/android/src/main/cpp/include/: haicam_libvlc_jni.h
flutter_vlc_player/android/src/main/java/org/videolan/libvlc/: HaicamRequest.java  Media.java
flutter_vlc_player/android/src/main/java/software/solid/fluttervlcplayer/: FlutterVlcPlayer.java
flutter_vlc_player/example/: pubspec.yaml
flutter_vlc_player/example/android/: build.gradle
flutter_vlc_player/example/android/gradle/wrapper/: gradle-wrapper.properties
flutter_vlc_player/example/lib/: single_tab.dart  video_data.dart  vlc_player_with_controls.dart
flutter_vlc_player/ios/: flutter_vlc_player.podspec
flutter_vlc_player/ios/Classes/: HaicamInputStream.mm  VlcViewController.swift
flutter_vlc_player/macos/: flutter_vlc_player.podspec
flutter_vlc_player/macos/Classes/: FlutterVlcPlayerPlugin.h  HaicamInputStream.h  SwiftFlutterVlcPlayerPlugin.swift  VlcViewBuilder.swift  VlcViewController.swift  VlcViewFactory.swift  messages.m
flutter_vlc_player/src/include/: haicam_libvlc.h
flutter_vlc_player_platform_interface/: pubspec.yaml
